에러사항 여러가지 수정

--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
@@ -532,10 +532,10 @@ $(function() {
 		artstInfoHtml += '<dt>SNS</dt>';
 		artstInfoHtml += '<dd>';
 		if(artstInfo.artistInfo.artstInstagramUrl != null && artstInfo.artistInfo.artstInstagramUrl != ""){
-			artstInfoHtml += '	<a href="'+ artstInfo.artistInfo.artstInstagramUrl +'" class="if-img"><img src="resources/img/icon/i-1.png" /></a>';
+			artstInfoHtml += '	<a href="'+ artstInfo.artistInfo.artstInstagramUrl +'" target="_blank" class="if-img"><img src="resources/img/icon/i-1.png" /></a>';
 		}
 		if(artstInfo.artistInfo.artstfacebookUrl != null && artstInfo.artistInfo.artstfacebookUrl != ""){
-			artstInfoHtml += '	<a href="'+ artstInfo.artistInfo.artstfacebookUrl +'" class="if-img"><img src="resources/img/icon/i-2.png" /></a>';
+			artstInfoHtml += '	<a href="'+ artstInfo.artistInfo.artstfacebookUrl +'" target="_blank" class="if-img"><img src="resources/img/icon/i-2.png" /></a>';
 		}
 		/* artstInfoHtml += '	<a href="#" class="if-img"><img src="resources/img/icon/i-3.png" /></a>';
 		artstInfoHtml += '	<a href="#" class="if-img"><img src="resources/img/icon/i-4.png" /></a>';
