--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -138,7 +138,7 @@
 						<div id="autocomplete">
 							<div class="ta-h3">
 								<h3 class="sea-h3">작품</h3>
-								<a href="javascript:void(0);" class="workMore"><span>more</span></a>
+								<a href="javascript:void(0);" class="workMore"></a>
 							</div>
 							<ul class="sea-text" id="work">
 								<!-- <li><a href="#">text</a></li>
@@ -148,7 +148,7 @@
 							</ul>
 							<div class="ta-h3">
 								<h3 class="sea-h3">작가</h3>
-								<a href="javascript:void(0);" class="artistMore"><span>more</span></a>
+								<a href="javascript:void(0);" class="artistMore"></a>
 							</div>
 							<ul class="sea-text" id="artst">
 								<!-- <li><a href="#">text</a></li>
