--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
@@ -48,6 +48,28 @@
 			  			});
 	
   						</script>
+  						<style>
+      #columns2{
+        column-width:350px;
+        column-gap: 15px;
+      }
+      #columns2 figure{
+        display: inline-block;
+        border:1px solid rgba(0,0,0,0.2);
+        margin:0;
+        margin-bottom: 15px;
+        padding:10px;
+        box-shadow: 2px 2px 5px rgba(0,0,0,0.5);;
+      }
+      #columns2 figure img{
+        width:100%;
+      }
+      #columns2 figure figcaption{
+        border-top:1px solid rgba(0,0,0,0.2);
+        padding:10px;
+        margin-top:11px;
+      }
+    </style>
 						
 						<div>
 							<div class="columns-wrap2 styleNone" id="columns2" >
@@ -129,7 +151,7 @@ function myWorkList(){
 			myWorkListHtml += '	</div>';
 		}
 		//if(result[i].dealTypCd == null){
-			myWorkListHtml += '<div class="item-div-img reg" style="height:320px;" >';
+			myWorkListHtml += '<div class="item-div-img reg" style="height:320px;width:470px;" >';
 			myWorkListHtml += '	<img src="'+ result[i].workMainImgUrl +'" style="height:320px;border-radius: 7px;-moz-border-radius: 7px;-khtml-border-radius: 7px;-webkit-border-radius: 7px">';
 			myWorkListHtml += '	<div class="item-ho3 reg-div">';
 			myWorkListHtml += '		<div class="regs" >';
