--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -1486,7 +1486,7 @@ columns2 figure {
 .sale{}
 
 .item-ho2{display:none;position: absolute;width: 100%;text-align: center;/* height: 100%; */z-index: 1;bottom: 0;padding: 23px 0 26px 0;}
-.item-ho2:after{content:'';position: absolute;width: 100%;height: 100%;left: 0;bottom: 0;background-color: rgb(0 0 0 / 80%);z-index: -1;}
+.item-ho2:after{content:'';position: absolute;width: 50%;height: 100%;right:0px;left: 105px;;bottom: 0;background-color: rgb(0 0 0 / 80%);z-index: -1;}
 .item-ho2 ul{padding-top: 8px;width: 100%;z-index: 2;}
 .item-ho2 ul li{font-size:18px;display: inline-block;color: rgb(255 255 255 / 80%);padding-right: 27px;position: relative;line-height: 1.3;}
 .item-ho2 ul li:after{content:':';position: absolute;top: 0;right: 11px;font-size: 18px;}
