--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -71,16 +71,16 @@
 				
 				<!-- 로그인후 -->
 				<div class="login-show h-img" id="loginAf" style="display:none;">
-					<span class="sog-1"><a href="javascript:fnModalAlert();"><img src="resources/img/icon-1.png" /></a></span>
+					<span class="sog-1"><a href="/scrap"><img src="resources/img/icon-1.png" /></a></span>
 					<span class="sog-2 lg-my"><a href="#"><img src="resources/img/icon-2.png" /></a></span>
 					<div class="s-hov">
 						<ul>
 							<li><a href="/memberEdit"><img src="resources/img/ic-1.jpg" /><span>마이 페이지</span></a></li>
 							<li><a href="/myDeal"><img src="resources/img/ic-2.jpg" /><span>경매 / 거래 내역</span></a></li>
 							<!-- class="myCollection" -->
-							<li><a href="javascript:fnModalAlert();"><img src="resources/img/ic-3.jpg" /><span>마이 콜렉션</span></a></li>
+							<li><a href="/myCollection"><img src="resources/img/ic-3.jpg" /><span>마이 콜렉션</span></a></li>
 							<!-- class="scrap" -->
-							<li><a href="javascript:fnModalAlert();"><img src="resources/img/ic-4.jpg" /><span>좋아요</span></a></li>
+							<li><a href="/scrap"><img src="resources/img/ic-4.jpg" /><span>좋아요</span></a></li>
 							<!-- /customerService -->
 							<li><a href="javascript:fnModalAlert();"><img src="resources/img/ic-5.jpg" /><span>고객센터</span></a></li>
 						</ul>
