--- a/src/main/resources/templates/thymeleaf/myPageLeft.html
+++ b/src/main/resources/templates/thymeleaf/myPageLeft.html
@@ -21,8 +21,8 @@
 				<div class="panel-body">
 					<ul class="mypage-ul">
 						<li class="" id="myDeal"><a href="/myDeal">거래 내역</a></li>
-						<li class="" id="coupon"><a href="/coupon">등급 / 쿠폰 / 포인트</a></li>
-						<li class=""><a href="#">문의 내역</a></li>
+						<li class="" id="coupon"><a href="javascript:fnModalAlert();">등급 / 쿠폰 / 포인트</a></li>
+						<li class=""><a href="javascript:fnModalAlert();">문의 내역</a></li>
 					</ul>
 				</div>
 			</div>
