--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
@@ -120,18 +120,18 @@ function myWorkList(){
 		
 		myWorkListHtml += '<figure class="item" >';
 		if(result[i].dealTypCd == "A" && result[i].dealSttsCd == "TP"){
-			myWorkListHtml += '	<div class="item-div-img active-on" onclick="workDetail('+ result[i].workSq +')">';
-			myWorkListHtml += '		<img src="'+ result[i].workMainImgUrl +'">';
-			myWorkListHtml += '		<div class="item-ho">';
-			myWorkListHtml += '			<p>'+ result[i].dealStrtDate +' - '+ result[i].dealEndngDate +'</p>';
-			myWorkListHtml += '			<p> 응찰수 : '+ result[i].bidCnt +'</p>';
-			myWorkListHtml += '				<ul><li>'+ result[i].dealRemainingDay +'<span>day</span></li>';
-			myWorkListHtml += '				<li>'+ result[i].dealRemainingHour +'<span>hrs</span></li>';
-			myWorkListHtml += '				<li>'+ result[i].dealRemainingMin +'<span>min</span></li>';
-			myWorkListHtml += '				<li>'+ result[i].dealRemainingSec +'<span>sec</span></li></ul>';
-			myWorkListHtml += '				<h4>시작가 : '+ formatComma(result[i].dealStrtPrc) +'</h4>';
-			myWorkListHtml += '		</div>';
-			myWorkListHtml += '	</div>';
+// 			myWorkListHtml += '	<div class="item-div-img active-on" onclick="workDetail('+ result[i].workSq +')">';
+// 			myWorkListHtml += '		<img src="'+ result[i].workMainImgUrl +'">';
+// 			myWorkListHtml += '		<div class="item-ho">';
+// 			myWorkListHtml += '			<p>'+ result[i].dealStrtDate +' - '+ result[i].dealEndngDate +'</p>';
+// 			myWorkListHtml += '			<p> 응찰수 : '+ result[i].bidCnt +'</p>';
+// 			myWorkListHtml += '				<ul><li>'+ result[i].dealRemainingDay +'<span>day</span></li>';
+// 			myWorkListHtml += '				<li>'+ result[i].dealRemainingHour +'<span>hrs</span></li>';
+// 			myWorkListHtml += '				<li>'+ result[i].dealRemainingMin +'<span>min</span></li>';
+// 			myWorkListHtml += '				<li>'+ result[i].dealRemainingSec +'<span>sec</span></li></ul>';
+// 			myWorkListHtml += '				<h4>시작가 : '+ formatComma(result[i].dealStrtPrc) +'</h4>';
+// 			myWorkListHtml += '		</div>';
+// 			myWorkListHtml += '	</div>';
 		}
 		if(result[i].dealTypCd == "S" && result[i].dealSttsCd == "TP"){
 // 			myWorkListHtml += '	<div class="item-div-img sale-on">';
@@ -146,9 +146,9 @@ function myWorkList(){
 // 			myWorkListHtml += '	</div>';
 		}
 		if(result[i].dealSttsCd == "aa"){
-			myWorkListHtml += '	<div class="item-div-img sold-3">';
-			myWorkListHtml += '		<img src="'+ result[i].workMainImgUrl +'">';
-			myWorkListHtml += '	</div>';
+// 			myWorkListHtml += '	<div class="item-div-img sold-3">';
+// 			myWorkListHtml += '		<img src="'+ result[i].workMainImgUrl +'">';
+// 			myWorkListHtml += '	</div>';
 		}
 		//if(result[i].dealTypCd == null){
 			myWorkListHtml += '<div class="item-div-img reg" style="height:320px;width:470px" >';
