수정 진짜 최종수정

--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -29,7 +29,7 @@
 				<div class="sub-title">
 					<h3 class="mo-no" id="pageTitle">응찰하기</h3>
 					<button type="button" class="btn-on" >판매중</button>
-					<button type="button" class="btn-off">거래완료</button>
+					<!-- <button type="button" class="btn-off">거래완료</button> -->
 				</div>
 				
 				<div class="baeg-wrap">
