--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -56,7 +56,7 @@
 				<div class="navbox">
 					<nav>
 						<li><a href="/deal">Deal</a></li>
-						<li><a href="/insights">Megazine</a></li>
+						<li><a href="javascript:fnModalAlert();">Mgz9</a></li>
 						<li><a href="/artist">Artist Library</a></li>
 						<li><a href="/serviceIntro">About</a></li>
 					</nav>
