정말 오늘 마지막 수정입니다 정말 마지막 이에요

--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -741,7 +741,7 @@
 	        	   var hotestHtml = '';
 	        	   for(i=0; i<mainHotest.length; i++){
 	        		hotestHtml +='<div class="swiper-slide">';
-					hotestHtml +='	<a class="hd-div">';
+					hotestHtml +='	<a class="hd-div" href="javascript:fnModalAlert();">';
 					hotestHtml +='		<img src="'+mainHotest[i].workMainImgUrl+'" class="hd-img" style="width:280px; heigth:280px;"/>';
 					hotestHtml +='		<div class="hd-text">';
 					hotestHtml +='			<h4>'+mainHotest[i].artstActvtyNm+'</h4>';
@@ -767,7 +767,7 @@
 	        	   var insightsHtml = '';
 	        	   for(i=0; i<mainInsights.length; i++){
 	        		insightsHtml += '	<li class="elm">';
-					insightsHtml += '		<a href="#">';
+					insightsHtml += '		<a href="javascript:fnModalAlert();">';
 					insightsHtml += '			<div class="cns-box">';
 					insightsHtml += '				<img src="'+mainInsights[i].mgzMainImgUrl+'" style="width:280px; height:280px;"/>';
 					insightsHtml += '				<div class="cns-sb">';
