메인 - 모바일 링크 추가

--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -60,10 +60,10 @@
 			<!-- 모바일일때 -->
 			<div class="contents mo-nav">
 				<nav>
-					<li><a href="#">Deal</a></li>
-					<li><a href="#">Megazine</a></li>
-					<li><a href="#">Artist Library</a></li>
-					<li><a href="#">About</a></li>
+					<li><a href="/deal">Deal</a></li>
+					<li><a href="javascript:fnModalAlert();">Megazine</a></li>
+					<li><a href="/artist">Artist Library</a></li>
+					<li><a href="/serviceIntro">About</a></li>
 				</nav>
 			</div>
 			
