--- a/src/main/resources/templates/thymeleaf/fo/deal/deal.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/deal.html
@@ -286,141 +286,9 @@
 						<div style="height:40px;"></div>
 						<div>
 							<div class="columns-wrap2" id="columns2">
-<!-- 								<figure class="item"> -->
 								
-<!-- 									<div class="heart on"></div> -->
-									
-<!-- 									<div class="item-div-img active"> -->
-<!-- 										<img src="resources/img/de/be-bg1.png"> -->
-										
-<!-- 										<div class="item-ho"> -->
-<!-- 											<p>2022. 01. 01 – 2022. 01.30</p> -->
-<!-- 											<p>응찰수 : 12</p> -->
-<!-- 											<ul> -->
-<!-- 												<li>03<span>day</span></li> -->
-<!-- 												<li>03<span>hrs</span></li> -->
-<!-- 												<li>03<span>min</span></li> -->
-<!-- 												<li>03<span>sec</span></li> -->
-<!-- 											</ul> -->
-<!-- 											<h4>시작가  3,700,000 원</h4> -->
-<!-- 										</div> -->
-										
-<!-- 										<div class="item-ho2 sale-div"> -->
-<!-- 											<h3>판매중</h3> -->
-<!-- 											<ul> -->
-<!-- 												<li>03<span>day</span></li> -->
-<!-- 												<li>03<span>hrs</span></li> -->
-<!-- 												<li>03<span>min</span></li> -->
-<!-- 												<li>03<span>sec</span></li> -->
-<!-- 											</ul> -->
-<!-- 										</div> -->
-										
-<!-- 										<div class="item-ho2 auction-div"> -->
-<!-- 											<h3>경매중</h3> -->
-<!-- 											<ul> -->
-<!-- 												<li>03<span>day</span></li> -->
-<!-- 												<li>03<span>hrs</span></li> -->
-<!-- 												<li>03<span>min</span></li> -->
-<!-- 												<li>03<span>sec</span></li> -->
-<!-- 											</ul> -->
-											
-<!-- 										</div> -->
-<!-- 									</div> -->
-									
-<!-- 									<div class="item-body"> -->
-<!-- 										<div class="uesr-s"> -->
-<!-- 											<img src="resources/img/de/ues-icon.png" /> -->
-<!-- 										</div> -->
-<!-- 										<div class="text-s"> -->
-<!-- 											<h3>작가명 (1983년생)</h3> -->
-<!-- 											<p class="ts-1">작품명 입니다작품명입니다작품명입니다(2021...</p> -->
-<!-- 											<p>Oil & Canvas</p> -->
-<!-- 											<p>72.7x90.9cm</p> -->
-											
-<!-- 											<h4>판매가 3,700,000</h4> -->
-											
-<!-- 											<p class="ts-2"> -->
-<!-- 												2022. 01. 01 – 2022. 01.30<br/> -->
-<!-- 												응찰수 : 12<br/> -->
-<!-- 												03일   07시    10분   30초  -->
-<!-- 											</p> -->
-<!-- 										</div> -->
-										
-<!-- 										<div class="artist active"><span>Artist</span></div> -->
-<!-- 									</div> -->
-									
-<!-- 								</figure> -->
-						
-<!-- 								<figure class="item"> -->
-<!-- 									<div class="heart"></div> -->
-									
-									
-									
-<!-- 									<div class="item-div-img active"> -->
-<!-- 									<div class="item-div-img sold-3"> -->
-<!-- 										<img src="resources/img/de/be-bg2.png"> -->
-<!-- 										<div class="item-ho"> -->
-<!-- 											<p>2022. 01. 01 – 2022. 01.30</p> -->
-<!-- 											<p>응찰수 : 12</p> -->
-<!-- 											<ul> -->
-<!-- 												<li>03<span>day</span></li> -->
-<!-- 												<li>03<span>hrs</span></li> -->
-<!-- 												<li>03<span>min</span></li> -->
-<!-- 												<li>03<span>sec</span></li> -->
-<!-- 											</ul> -->
-<!-- 											<h4>시작가  3,700,000 원</h4> -->
-<!-- 										</div> -->
-<!-- 									</div> -->
-<!-- 									</div> -->
-									
-<!-- 									<div class="item-body"> -->
-<!-- 										<div class="uesr-s"> -->
-<!-- 											<img src="resources/img/de/ues-icon.png" /> -->
-<!-- 										</div> -->
-<!-- 										<div class="text-s"> -->
-<!-- 											<h3>작가명 (1983년생)</h3> -->
-<!-- 											<p class="ts-1">작품명 입니다작품명입니다작품명입니다(2021...</p> -->
-<!-- 											<p>Oil & Canvas</p> -->
-<!-- 											<p>72.7x90.9cm</p> -->
-											
-<!-- 											<h4>판매가 3,700,000</h4> -->
-											
-<!-- 										</div> -->
-										
-<!-- 										<div class="artist"><span>Artist</span></div> -->
-<!-- 									</div> -->
-<!-- 								</figure> -->
-								
-<!-- 								<figure class="item"> -->
-<!-- 									<div class="heart"></div> -->
-									
-<!-- 									<div class="item-div-img sale"> -->
-<!-- 										<img src="resources/img/de/be-bg3.png">										 -->
-<!-- 									</div> -->
-									
-<!-- 									<div class="item-body"> -->
-<!-- 										<div class="uesr-s"> -->
-<!-- 											<img src="resources/img/de/ues-icon.png" /> -->
-<!-- 										</div> -->
-<!-- 										<div class="text-s"> -->
-<!-- 											<h3>작가명 (1983년생)</h3> -->
-<!-- 											<p class="ts-1">작품명 입니다작품명입니다작품명입니다(2021...</p> -->
-<!-- 											<p>Oil & Canvas</p> -->
-<!-- 											<p>72.7x90.9cm</p> -->
-											
-<!-- 											<h4>판매가 3,700,000</h4> -->
-<!-- 										</div> -->
-										
-<!-- 										<div class="artist"><span>Artist</span></div> -->
-<!-- 									</div> -->
-<!-- 								</figure> -->
-<!-- 							</div> -->
+							</div>
 						</div>
-						
-<!-- 						<div class="text-center mg_t50"> -->
-<!-- 							<button type="button" class="btn-more"><span>more</span></button> -->
-<!-- 						</div> -->
-						
 					</div>
 				</div>
 				
@@ -757,7 +625,7 @@ function dealSearch(){
      		if(data == null){
      			alert("검색 결과가 없습니다.");
      		}else{
-     			$("#columns2").empty();
+     			//$("#columns2").empty();
      			dealList = data.result;
      		
 	     		for(var i=0; i<dealList.length; i++){
@@ -828,12 +696,12 @@ function dealSearch(){
 	     			dealListHtml += '	</div>';
 	     			dealListHtml += '</figure>';
 	     		}
-	     		$("#columns2").append(dealListHtml).trigger("create");
+	     		//$("#columns2").append(dealListHtml).trigger("create");
      		}
      		
         },
         error: function(error) {
-            alert("오류 발생" + error);
+            alert("오류 발생" + error); 
         }
 	})
 }
