새로고침 수정, 작품등록 가이드 버튼 활성화, 응찰하기 사이즈 조정, 아티스트 대표 사진 변경

--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
@@ -373,7 +373,7 @@ function artistLibraryList(){
 	        		if(upAndComingArtist[i].artstWorkImgUrl != null && upAndComingArtist[i].artstWorkImgUrl != ""){
 	        			upAndComingArtistHtml += '		<div class="hd-bg3"><img src="'+ upAndComingArtist[i].artstWorkImgUrl +'" /></div>';
 	        		}else{
-	        			upAndComingArtistHtml += '		<div class="hd-bg3"><img src="resources/img/icon/bg-1.png" /></div>';
+	        			upAndComingArtistHtml += '		<div class="hd-bg3"><img src="resources/img/icon/bg-1.png"/></div>';
 	        		}
 	        		if(upAndComingArtist[i].artstProfileImgUrl != null && upAndComingArtist[i].artstProfileImgUrl != ""){
 	        			upAndComingArtistHtml += '		<div class="user-1"><img src="'+ upAndComingArtist[i].artstProfileImgUrl +'" style="border-radius:30%;"></div>';
@@ -397,7 +397,7 @@ function artistLibraryList(){
 	        			middleAgedArtistHtml += '		<div class="hd-bg3"><img src="resources/img/icon/bg-1.png" /></div>';
 	        		}
 	        		if(middleAgedArtist[i].artstProfileImgUrl != null && middleAgedArtist[i].artstProfileImgUrl != ""){
-	        			middleAgedArtistHtml += '		<div class="user-1"><img src="'+ middleAgedArtist[i].artstProfileImgUrl +'"></div>';
+	        			middleAgedArtistHtml += '		<div class="user-1"><img src="'+ middleAgedArtist[i].artstProfileImgUrl +'" style="border-radius:30%;"></div>';
 	        		}else{
 	        			middleAgedArtistHtml += '		<div class="user-1"><img src="resources/img/icon/user-1.png"></div>';
 	        		}
@@ -418,7 +418,7 @@ function artistLibraryList(){
 	        			seniorArtistHtml += '		<div class="hd-bg3"><img src="resources/img/icon/bg-1.png" /></div>';
 	        		}
 	        		if(seniorArtist[i].artstProfileImgUrl != null && seniorArtist[i].artstProfileImgUrl != ""){
-	        			seniorArtistHtml += '		<div class="user-1"><img src="'+ seniorArtist[i].artstProfileImgUrl +'"></div>';
+	        			seniorArtistHtml += '		<div class="user-1"><img src="'+ seniorArtist[i].artstProfileImgUrl +'" style="border-radius:30%;"></div>';
 	        		}else{
 	        			seniorArtistHtml += '		<div class="user-1"><img src="resources/img/icon/user-1.png"></div>';
 	        		}
