--- a/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
@@ -40,7 +40,7 @@
 				
 				<div class="baeg-wrap">
 					<div class="baeg-left">
-						<img th:src="${result.work.workMainImgUrl}" />
+						<img th:src="${result.work.workMainImgUrl}" style="width:98%;"/>
 					</div>
 					<div class="baeg-right">
 					
