--- a/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
@@ -182,13 +182,7 @@ function myCollectionList(){
 
 $(document).on("click", ".cor-a", function(){
 	var workSq= $(this).attr("workSq");
-    pageGoPost({
-		url:"/myCollectionMod",
-		target:"_self",
-		vals:[
-			["workSq", workSq]
-		]
-	});
+    location.href = "/myCollectionMod?workSq="+workSq;
 });
 
 $(document).on("click", ".reg-a", function(){
